--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200, 300, 400, 600, 700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200, 300, 400, 600, 700" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   
   <body>
