--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Manetti Shrem</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="./reset.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200, 300, 400, 600, 700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:200, 300, 400, 600, 700" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
@@ -44,7 +44,7 @@
 
         <!-- slideshow of the exhibit -->
         <div class="exhibit">
-          <img src="/assets/fabric.jpg" alt="Dumbass Piece of Fabric">
+          <img src="./images/fabric.jpg" alt="Dumbass Piece of Fabric">
         </div>
 
         <!-- the buttons for each picture -->
@@ -86,7 +86,7 @@
         <p>This is to prioritize the health and safety of our students, faculty, and the community at large. Thank you for your patience.</p>
       </div>
     </footer>
-  <script src="actions.js">
+  <script src="./actions.js">
   </script>
   </body>
 </html>
